Overview map fix. display: inline-block was making things work before but it's too sensitive to whitespace/br issues. Switched to display:block and made work by doing float: left for both the map and the sidebar.

--- a/sapling/utils/static/olwidget/css/sapling.css
+++ b/sapling/utils/static/olwidget/css/sapling.css
@@ -7,7 +7,6 @@
 }
 
 #results_pane {
-	display: inline-block;
 	padding: 0em 1em;
 	overflow-y: auto;
 	float: left;
